--- a/templates/home.html
+++ b/templates/home.html
@@ -38,12 +38,12 @@
         </div>
     </section>
 
-    <h2>Cities you may like to visit</h2>
+    <!-- <h2>Cities you may like to visit</h2>
     <ul>
         {% for city, search_count in top_cities %}
             <li><a href="{{ url_for('attractions', city=city) }}">{{ city }} ({{ search_count }} searches)</a></li>
         {% endfor %}
-    </ul>
+    </ul> -->
     
 </body>
 </html>
