--- a/templates/register.html
+++ b/templates/register.html
@@ -12,13 +12,13 @@
     <div id="b1">
 
         <!-- header -->
-    <header class="header" data-header>
+    <!-- <header class="header" data-header>
         <div class="header-top">
           <div class="container">
             <a href="#" class="logo">SMART TRAVEL </a>
             </div>
           </div>
-      </header>
+      </header> -->
 
   <!-- background  -->
   <main>
@@ -40,7 +40,13 @@
               <input type="text" name="username" required>
       
               <label for="email">Email:</label>
-              <input type="email" name="email" required>
+              <input type="email" name="email"  required>
+
+              <label for="age">Age:</label>
+              <input type="text" name="age" >
+
+              <label for="gender">Gender:</label>
+              <input type="text" name="gender" >
       
               <label for="country">Country:</label>
               <input type="text" name="country" required>
