--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -27,6 +27,11 @@
                 box-sizing: border-box;
             } */
             
+            img{
+        width: 500px;
+        height: 200px !important;
+        object-fit: cover;
+      }
             .col-md-4 {
                 margin-top: 2rem;
             }
