--- a/static/css/home.css
+++ b/static/css/home.css
@@ -20,19 +20,51 @@ body{
     background: var(--bg-color);
     color: var(--text-color);
 }
-header{
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+.logo {
+    color: black;
+    text-decoration: none;
+}
+
+.navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar li {
+    display: inline;
+    margin-left: 20px;
+}
+
+.navbar li a {
+    color: black;
+    text-decoration: none;
+}
+
+/* header{
     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
+    height: 9%;
     z-index: 1000;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: transparent;
+    background: transparent; 
+    opacity: 0.9;
+    background-color: rgb(125, 159, 211);
     padding: 30px 10%;
     transition: ease -40s;
-    margin-bottom: 2%;
+    margin-bottom: 2%; 
 }
 
 .logo{
@@ -46,9 +78,10 @@ header{
 }
 .navbar a{
     color: var(--bg-color);
-    font-size: var(--p-font);
+    
+    font-size: 17px;
     font-weight: 500;
-    padding: 10px 22px;
+    padding: 5px 22px;
     border-radius: 4px;
     transition: ease .40s;
 }
@@ -57,7 +90,7 @@ header{
     color: var(--text-color);
     box-shadow: 5px 10px 30px rgb(85 85 85/20%);
     border-radius: 4px;
-}
+} */
 section{
     padding: 80px 18%;
 }
@@ -86,6 +119,8 @@ section{
     margin-bottom: 20px;
     margin-top: 60px;
 }
+
+
 .home-text p{
     color: var(--bg-color);
     font-size: 25px;
@@ -109,9 +144,10 @@ section{
 .places a{
     font-family: "Poppins", sans-serif;
     color: var(--bg-color);
-    font-size: var(--p-font);
+    /* font-size: var(--p-font); */
+    font-size: 17px;
     font-weight: 500;
-    padding: 10px 10px;
+    /* padding: 10px 10px; */
     border-radius: 4px;
     transition: ease .40s; 
 }
@@ -120,4 +156,9 @@ section{
     color: var(--text-color);
     box-shadow: 5px 10px 30px rgb(85 85 85/20%);
     border-radius: 4px;
+}
+
+.places{
+    display: flex;
+justify-content: space-between;
 }
