--- a/static/css/home.css
+++ b/static/css/home.css
@@ -23,9 +23,13 @@ body{
 
 header {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: right;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 2px;
+    /* height: 20px; */
+   
+    width: 100%;
 }
 
 .logo {
@@ -33,20 +37,29 @@ header {
     text-decoration: none;
 }
 
-.navbar {
+.nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: row;
+    /* display: inline; */
+    /* Move the navbar to the left */
+    float: right;
+    list-style: none; /* Remove default list styles */
 }
 
-.navbar li {
-    display: inline;
-    margin-left: 20px;
+.nav li {
+    /* display: inline;
+    margin-left: 20px; */
+    display: inline-block; /* Display list items horizontally */
+    margin-right: 20px; /* Add space between list items */
 }
 
-.navbar li a {
+.nav li a {
     color: black;
     text-decoration: none;
+    font-size: 17px;
 }
 
 /* header{
@@ -108,7 +121,7 @@ section{
   background-blend-mode: overlay;
   display: grid;
   /* min-height: 710px; */
-  padding-top: 125px;
+  /* padding-top: 125px; */
 }
 .home-text h1{
     font-size: var(--big-font);
